parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FILE
    INT
    LP
    RP
    STRING

Grammar

Rule 0     S' -> statement
Rule 1     statement -> method
Rule 2     statement -> assignment
Rule 3     statement -> empty
Rule 4     assignment -> stu_assignment
Rule 5     assignment -> method_assignment
Rule 6     method -> method_moveup
Rule 7     method -> method_print
Rule 8     method -> method_file
Rule 9     method_file -> ID
Rule 10    method_print -> ID DOT PRINT
Rule 11    method_moveup -> ID DOT METHOD_MoveUp
Rule 12    stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA ID COMMA ID COMMA ID
Rule 13    method_assignment -> ID DOT METHOD_INQ
Rule 14    empty -> <empty>

Terminals, with rules where they appear

COMMA                : 12 12 12 12
DOT                  : 10 11 13
EQUALS               : 12
FILE                 : 
ID                   : 9 10 11 12 12 12 12 12 13
INT                  : 
LP                   : 
METHOD_INQ           : 13
METHOD_MoveUp        : 11
PRINT                : 10
RP                   : 
STRING               : 
STUDENT              : 12
error                : 

Nonterminals, with rules where they appear

assignment           : 2
empty                : 3
method               : 1
method_assignment    : 5
method_file          : 8
method_moveup        : 6
method_print         : 7
statement            : 0
stu_assignment       : 4

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . method
    (2) statement -> . assignment
    (3) statement -> . empty
    (6) method -> . method_moveup
    (7) method -> . method_print
    (8) method -> . method_file
    (4) assignment -> . stu_assignment
    (5) assignment -> . method_assignment
    (14) empty -> .
    (11) method_moveup -> . ID DOT METHOD_MoveUp
    (10) method_print -> . ID DOT PRINT
    (9) method_file -> . ID
    (12) stu_assignment -> . STUDENT EQUALS ID COMMA ID COMMA ID COMMA ID COMMA ID
    (13) method_assignment -> . ID DOT METHOD_INQ

    $end            reduce using rule 14 (empty -> .)
    ID              shift and go to state 10
    STUDENT         shift and go to state 11

    statement                      shift and go to state 1
    method                         shift and go to state 2
    assignment                     shift and go to state 3
    empty                          shift and go to state 4
    method_moveup                  shift and go to state 5
    method_print                   shift and go to state 6
    method_file                    shift and go to state 7
    stu_assignment                 shift and go to state 8
    method_assignment              shift and go to state 9

state 1

    (0) S' -> statement .



state 2

    (1) statement -> method .

    $end            reduce using rule 1 (statement -> method .)


state 3

    (2) statement -> assignment .

    $end            reduce using rule 2 (statement -> assignment .)


state 4

    (3) statement -> empty .

    $end            reduce using rule 3 (statement -> empty .)


state 5

    (6) method -> method_moveup .

    $end            reduce using rule 6 (method -> method_moveup .)


state 6

    (7) method -> method_print .

    $end            reduce using rule 7 (method -> method_print .)


state 7

    (8) method -> method_file .

    $end            reduce using rule 8 (method -> method_file .)


state 8

    (4) assignment -> stu_assignment .

    $end            reduce using rule 4 (assignment -> stu_assignment .)


state 9

    (5) assignment -> method_assignment .

    $end            reduce using rule 5 (assignment -> method_assignment .)


state 10

    (11) method_moveup -> ID . DOT METHOD_MoveUp
    (10) method_print -> ID . DOT PRINT
    (9) method_file -> ID .
    (13) method_assignment -> ID . DOT METHOD_INQ

    DOT             shift and go to state 12
    $end            reduce using rule 9 (method_file -> ID .)


state 11

    (12) stu_assignment -> STUDENT . EQUALS ID COMMA ID COMMA ID COMMA ID COMMA ID

    EQUALS          shift and go to state 13


state 12

    (11) method_moveup -> ID DOT . METHOD_MoveUp
    (10) method_print -> ID DOT . PRINT
    (13) method_assignment -> ID DOT . METHOD_INQ

    METHOD_MoveUp   shift and go to state 14
    PRINT           shift and go to state 15
    METHOD_INQ      shift and go to state 16


state 13

    (12) stu_assignment -> STUDENT EQUALS . ID COMMA ID COMMA ID COMMA ID COMMA ID

    ID              shift and go to state 17


state 14

    (11) method_moveup -> ID DOT METHOD_MoveUp .

    $end            reduce using rule 11 (method_moveup -> ID DOT METHOD_MoveUp .)


state 15

    (10) method_print -> ID DOT PRINT .

    $end            reduce using rule 10 (method_print -> ID DOT PRINT .)


state 16

    (13) method_assignment -> ID DOT METHOD_INQ .

    $end            reduce using rule 13 (method_assignment -> ID DOT METHOD_INQ .)


state 17

    (12) stu_assignment -> STUDENT EQUALS ID . COMMA ID COMMA ID COMMA ID COMMA ID

    COMMA           shift and go to state 18


state 18

    (12) stu_assignment -> STUDENT EQUALS ID COMMA . ID COMMA ID COMMA ID COMMA ID

    ID              shift and go to state 19


state 19

    (12) stu_assignment -> STUDENT EQUALS ID COMMA ID . COMMA ID COMMA ID COMMA ID

    COMMA           shift and go to state 20


state 20

    (12) stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA . ID COMMA ID COMMA ID

    ID              shift and go to state 21


state 21

    (12) stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA ID . COMMA ID COMMA ID

    COMMA           shift and go to state 22


state 22

    (12) stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA ID COMMA . ID COMMA ID

    ID              shift and go to state 23


state 23

    (12) stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA ID COMMA ID . COMMA ID

    COMMA           shift and go to state 24


state 24

    (12) stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA ID COMMA ID COMMA . ID

    ID              shift and go to state 25


state 25

    (12) stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA ID COMMA ID COMMA ID .

    $end            reduce using rule 12 (stu_assignment -> STUDENT EQUALS ID COMMA ID COMMA ID COMMA ID COMMA ID .)

